Fixed some light items in dark mode

--- a/Windows/userChrome.css
+++ b/Windows/userChrome.css
@@ -108,6 +108,18 @@ menupopup:not(#goPopup):not(#bookmarksMenuPopup):not(#BMB_bookmarksPopup) {
 .subviewbutton-back {
     border-radius: 4px 0 0 0 !important;
 }
+:-moz-any(#editBMPanel_folderTree)
+treechildren::-moz-tree-row(selected) {
+    background-color: #1E90FF !important;
+}
+:-moz-any(#editBMPanel_folderTree)
+treechildren::-moz-tree-cell-text(selected) {
+    color: #fff !important;
+}
+:-moz-any(#editBMPanel_folderTree)
+treechildren::-moz-tree-image(selected) {
+    fill: #fff !important;
+}
 
 /* menu popups DARK MODE */
 .menupopup-arrowscrollbox:not([part="arrowscrollbox"]):-moz-lwtheme-brighttext,
@@ -258,13 +270,25 @@ menupopup:not(#goPopup):not(#bookmarksMenuPopup):not(#BMB_bookmarksPopup):-moz-l
     border: none !important;
 }
 #editBMPanel_namePicker:-moz-lwtheme-brighttext,
-#editBMPanel_tagsField:-moz-lwtheme-brighttext {
+#editBMPanel_tagsField:-moz-lwtheme-brighttext,
+#editBMPanel_folderTree:-moz-lwtheme-brighttext,
+#editBMPanel_tagsSelector:-moz-lwtheme-brighttext {
     appearance: none !important;
     padding: 4px !important;
     color: #fff !important;
+    fill: #fff !important;
 	background: linear-gradient(#3C3C3C, #404040) !important;
     border: 1px solid #272727 !important;
     border-radius: 3px !important;
+}
+#editBMPanel_newFolderButton:-moz-lwtheme-brighttext {
+    appearance: none !important;
+    padding: 4px !important;
+    background-color: rgba(68,68,68,1) !important;
+    border: 1px solid rgba(0,0,0,0.50) !important;
+    border-radius: 3px !important;
+	color: #fff !important;
+	box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.10) !important;
 }
 
 /* menu popups DARK MODE in elementary Tweaks */
